--- a/lab 2/Facts.html
+++ b/lab 2/Facts.html
@@ -6,8 +6,8 @@
         <link href=link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="Normalize.css: Make browsers render all elements more consistently..webarchive">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="CSS/Normalize.css">
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
 
     <body>
@@ -17,16 +17,16 @@
                 <h1>About me!</h1>
         </header>
         <nav>
-                <A href="index.html">Home</A></li>
-                <a href="about.html">About</a></li>
-                <a class="active" href="Facts.html">Facts</a></li>
+                <A href="index.html">Home</A>
+                <a href="about.html">About</a>
+                <a class="active" href="Facts.html">Facts</a>
         </nav>
         <main>
             <h2>Facts about me!</h2>
             <p> I have two older sisters and we all have the same initials! </p>
             <p> I am majoring in Business Management!</p>
             <p> I have two puppies and they are my whole world!</p>
-            <img src="images/Dachshund-min-1.jpg" alt="Product 1"></ing>
+            <img src="images/Dachshund-min-1.jpg" alt="Product 1"></img>
         </main>
     <footer>&copy; 2021 About me!</footer> 
 </div> 
