--- a/lab 2/about.html
+++ b/lab 2/about.html
@@ -6,8 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="Normalize.css: Make browsers render all elements more consistently..webarchive">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="CSS/Normalize.css">
+        <link rel="stylesheet" href="CSS/">
     </head>
 
     <body>
@@ -17,14 +17,14 @@
                 <h1>About me!</h1>
         </header>
         <nav>
-                <A href="index.html">Home</A></li>
-                <a class="active" href="about.html">About</a></li>
-                <a href="Facts.html">Facts</a></li>
+                <A href="index.html">Home</A>
+                <a class="active" href="about.html">About</a>
+                <a href="Facts.html">Facts</a>
         </nav>
         <main>
             <h2>More about me!</h2>
             <p>I am a massive Alabama Crimson Tide football fan! I love football and sports in general! Roll Tide!</p>
-            <img src="images/bama.jpg" alt="Product 1"></ing>
+            <img src="images/bama.jpg" alt="Product 1"></img>
         </main>
     <footer>&copy; 2021 About me!</footer> 
 </div> 
