--- a/lab 2/index.html
+++ b/lab 2/index.html
@@ -6,8 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="Normalize.css: Make browsers render all elements more consistently..webarchive">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="CSS/Normalize.css">
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
 
     <body>
@@ -17,14 +17,14 @@
                 <h1>About me!</h1>
         </header>
         <nav>
-                <A class="active" href="index.html">Home</A></li>
-                <a href="about.html">About</a></li>
-                <a href="Facts.html">Facts</a></li>
+                <A class="active" href="index.html">Home</A>
+                <a href="about.html">About</a>
+                <a href="Facts.html">Facts</a>
         </nav>
         <main>
             <h2>Welcome to about me!</h2>
             <p>This is my website about me and my life! This is for my basic web design class. Thank you.</p>
-            <img src="images/w crown.jpg" alt="Product 1"></ing>
+            <img src="images/w crown.jpg" alt="Product 1"></img>
         </main>
     <footer>&copy; 2021 About me!</footer> 
 </div> 
